--- a/website/website.html
+++ b/website/website.html
@@ -10,7 +10,7 @@
         <img src="images/missLily.jpg" alt="">
     </div>
     <div>
-        <img src="" alt="">
+        <img src="images" alt="">
     </div>
     <div>
         <img src="" alt="">
