--- a/website/website.html
+++ b/website/website.html
@@ -1,25 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=local_dining" />    <link rel="stylesheet" href="website.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+
     <title>Travel Website</title>
 </head>
-   <div>
-    <div>
-        <img src="images/missLily.jpg" alt="">
-    </div>
-    <div>
-        <img src="" alt="">
-    </div>
-    <div>
-        <img src="" alt="">
-    </div>
-    <div>
-        <img src="" alt="">
-    </div>
-   </div>
 <body>
-    
+    <div class="header">
+        <span class="material-symbols-outlined">
+            local_dining
+            </span>
+        <h1> <b>EATS OF THE CENTURY</b></h1>
+        <span class="material-symbols-outlined">
+            local_dining
+            </span>
+    </div>
+    <hr>
+
+    <h2>Explore some Jamaican Restaurants in New York! </h1>
+    <div class="restaurantsContainer">
+   
+    <div class="restaurant child1">
+        <img src="images/missLily.jpg" alt="">
+        <h3>Miss Lily's Restaurant</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt voluptatibus eum expedita natus assumenda deserunt nesciunt eligendi ullam harum fugiat dignissimos ad, exercitationem blanditiis quo deleniti ea molestiae molestias fugit.</p>
+        <button><a href="mL.html">Visit</a></button>
+    </div>
+    <div class="restaurant child2">
+        <img src="images/centralCaribbeanBakery.jpg" alt="">
+        <h3>Central Caribbean Bakery</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam laudantium accusamus in aliquam quam illo animi voluptas recusandae quia veniam, repellat et voluptates quod eaque voluptate cum? Odio, sapiente quas.</p>
+        <button><a href="cCB.html">Visit</a></button>
+
+    </div>
+    <div class="restaurant child3">
+        <img src="images/goldenKrust.jpg" alt="">
+        <h3>Golden Krust Bakery & Restaurant</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem quisquam itaque facere aspernatur vitae expedita voluptatum similique animi, aliquam beatae velit maiores omnis praesentium doloribus unde nesciunt recusandae id consectetur!</p>
+        <button><a href="gK.html">Visit</a></button>
+
+    </div>
+    <div class="restaurant child4">
+        <img src="images/omarsKitchen.jpg" alt="">
+        <h3>Omar's Kitchen & Rum Bar</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere hic numquam nobis perferendis repellendus, nihil quaerat illum facilis sed, alias vitae iure consequuntur iusto? Eos quas commodi ratione quibusdam tempora.</p>
+        <button><a href="oK.html">Visit</a></button>
+    </div>
+    <hr >
+   </div>
+
+   <div class="separator">
+
+   </div>
+
+   <div class="info">
+       
+   </div>
 </body>
 </html>
+
