--- a/website/website.html
+++ b/website/website.html
@@ -23,34 +23,34 @@
     </div>
     <hr>
 
-    <h2>Explore some Jamaican Restaurants in New York! </h1>
+    <h2>Explore some Jamaican Restaurants in New York! </h2>
     <div class="restaurantsContainer">
    
     <div class="restaurant child1">
         <img src="images/missLily.jpg" alt="">
         <h3>Miss Lily's Restaurant</h3>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt voluptatibus eum expedita natus assumenda deserunt nesciunt eligendi ullam harum fugiat dignissimos ad, exercitationem blanditiis quo deleniti ea molestiae molestias fugit.</p>
-        <button><a href="mL.html">Visit</a></button>
+        <p>Miss Lily's 7A Cafe is an East Village outpost of the popular Caribbean restaurant Miss Lily's, known for its lively atmosphere and authentic Jamaican cuisine.</p>
+        <button><a href="https://www.misslilys.com/location/miss-lilys-east-village-7a/" target="_blank">Visit</a></button>
     </div>
     <div class="restaurant child2">
         <img src="images/centralCaribbeanBakery.jpg" alt="">
         <h3>Central Caribbean Bakery</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam laudantium accusamus in aliquam quam illo animi voluptas recusandae quia veniam, repellat et voluptates quod eaque voluptate cum? Odio, sapiente quas.</p>
-        <button><a href="cCB.html">Visit</a></button>
+        <p>The Bronx's best kept secret. Wide array of Jamaican pastry and delectable delights. As a fusion of both a restaurant and bakery, it offers a unique taste of Jamaican culinary.</p>
+        <button><a href="https://www.instagram.com/central_caribbean_bakery_/?hl=en" target="_blank">Visit</a></button>
 
     </div>
     <div class="restaurant child3">
         <img src="images/goldenKrust.jpg" alt="">
         <h3>Golden Krust Bakery & Restaurant</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem quisquam itaque facere aspernatur vitae expedita voluptatum similique animi, aliquam beatae velit maiores omnis praesentium doloribus unde nesciunt recusandae id consectetur!</p>
-        <button><a href="gK.html">Visit</a></button>
+        <p>Golden Krust Caribbean Bakery, Inc. is a Caribbean fast casual restaurant operator and manufacturer of Caribbean cuisine including Jamaican food, Jamaican patty, and other baked goods.</p>
+        <button><a href="https://goldenkrust.com/" target="_blank">Visit</a></button>
 
     </div>
     <div class="restaurant child4">
         <img src="images/omarsKitchen.jpg" alt="">
         <h3>Omar's Kitchen & Rum Bar</h3>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere hic numquam nobis perferendis repellendus, nihil quaerat illum facilis sed, alias vitae iure consequuntur iusto? Eos quas commodi ratione quibusdam tempora.</p>
-        <button><a href="oK.html">Visit</a></button>
+        <p>Omar's Kitchen is a nouveau Caribbean restaurant found in the heart of New York City's Lower East Side. Funky, colorful venue offering creative Caribbean classics, plus desserts, rum & outdoor seating.</p>
+        <button><a href="https://www.omarskitchen.com/" target="_blank">Visit</a></button>
     </div>
     <hr >
    </div>
@@ -60,8 +60,25 @@
    </div>
 
    <div class="info">
-       
+   </div>
+
+   <div>
+        <h2>Menu Recommendations + Photos</h2>
+        <p>Here are some of the most popular dishes you can find at these restaurants:</p>
+
+        <div></div>
+
+        <ul>
+            <li>Jerk Chicken - A spicy, marinated chicken dish grilled to perfection.</li>
+            <li>Oxtail Stew - Tender oxtails slow-cooked in a rich, flavorful gravy.</li>
+            <li>Escovitch Fish - Fried fish topped with a spicy vinegar-based dressing and vegetables.</li>
+            <li>Callaloo - A nutritious leafy green vegetable dish, often cooked with onions and tomatoes.</li>
+            <li>Festival - Sweet fried dumplings that are a perfect side to any meal.</li>
+            <li>Rice and Peas - A staple side dish made with rice, kidney beans, and coconut milk.</li>
+            <li>Plantains - Fried or baked sweet plantains that complement savory dishes.</li>
+        </ul>
    </div>
 </body>
+
 </html>
 
