--- a/website/website.html
+++ b/website/website.html
@@ -66,7 +66,14 @@
         <h2>Menu Recommendations + Photos</h2>
         <p>Here are some of the most popular dishes you can find at these restaurants:</p>
 
-        <div></div>
+        <div>
+            <img src="images/jerkChicken.jpeg" alt="Jerk Chicken">
+            <img src="images/oxtailStew.jpeg" alt="Oxtail Stew">
+            <img src="images/ackee.jpeg" alt="Ackee & Breadfruit">
+            <img src="images/stewPeas.jpeg" alt="Stew Peas & Rice">
+            <img src="images/festival.jpeg" alt="Festival">
+
+        </div>
 
         <ul>
             <li>Jerk Chicken - A spicy, marinated chicken dish grilled to perfection.</li>
